assets url change

--- a/Views/Admin/auth/login.ejs
+++ b/Views/Admin/auth/login.ejs
@@ -13,17 +13,17 @@
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
-      href="../../../public/admin/plugins/fontawesome-free/css/all.min.css"
+      href="/admin/plugins/fontawesome-free/css/all.min.css"
     />
     <!-- icheck bootstrap -->
     <link
       rel="stylesheet"
-      href="../../../public/admin/plugins/icheck-bootstrap/icheck-bootstrap.min.css"
+      href="/admin/plugins/icheck-bootstrap/icheck-bootstrap.min.css"
     />
     <!-- Theme style -->
     <link
       rel="stylesheet"
-      href="../../../public/admin/dist/css/adminlte.min.css"
+      href="/admin/dist/css/adminlte.min.css"
     />
   </head>
   <body class="hold-transition login-page">
@@ -32,7 +32,7 @@
       <div class="card card-outline card-primary">
         <div class="card-header text-center">
           <img
-            src="../../../public/admin/dist/img/logo-lottery.png"
+            src="/admin/dist/img/logo-lottery.png"
             alt=""
             srcset=""
           />
@@ -97,11 +97,11 @@
     <!-- /.login-box -->
 
     <!-- jQuery -->
-    <script src="../../../public/admin/plugins/jquery/jquery.min.js"></script>
+    <script src="/admin/plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
-    <script src="../../../public/admin/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/admin/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="../../../public/admin/dist/js/adminlte.min.js"></script>
+    <script src="/admin/dist/js/adminlte.min.js"></script>
 
     <script>
       function DoLogin() {
