assets link change

--- a/Views/Admin/includes/loader.ejs
+++ b/Views/Admin/includes/loader.ejs
@@ -2,7 +2,7 @@
 <div class="preloader flex-column justify-content-center align-items-center">
   <img
     class="animation__wobble"
-    src="../../../public/admin/dist/img/logo-lottery.png"
+    src="/admin/dist/img/logo-lottery.png"
     alt="AdminLTELogo"
     height="60"
     width="60"
