--- a/Views/Admin/includes/head.ejs
+++ b/Views/Admin/includes/head.ejs
@@ -11,22 +11,22 @@
   <!-- Font Awesome Icons -->
   <link
     rel="stylesheet"
-    href="../../../public/admin/plugins/fontawesome-free/css/all.min.css"
+    href="/admin/plugins/fontawesome-free/css/all.min.css"
   />
   <!-- overlayScrollbars -->
   <link
     rel="stylesheet"
-    href="../../../public/admin/plugins/overlayScrollbars/css/OverlayScrollbars.min.css"
+    href="/admin/plugins/overlayScrollbars/css/OverlayScrollbars.min.css"
   />
   <!-- Theme style -->
   <link
     rel="stylesheet"
-    href="../../../public/admin/dist/css/adminlte.min.css"
+    href="/admin/dist/css/adminlte.min.css"
   />
 
   <!-- Tempusdominus Bootstrap 4 -->
   <link
     rel="stylesheet"
-    href="../../../public/admin/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css"
+    href="/admin/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css"
   />
 </head>
