--- a/Views/Admin/includes/scripts.ejs
+++ b/Views/Admin/includes/scripts.ejs
@@ -1,45 +1,45 @@
 <!-- REQUIRED SCRIPTS -->
 <!-- jQuery -->
-<script src="../../../public/admin/plugins/jquery/jquery.min.js"></script>
+<script src="/admin/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap -->
-<script src="../../../public/admin/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="/admin/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- overlayScrollbars -->
-<script src="../../../public/admin/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+<script src="/admin/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
 <!-- AdminLTE App -->
-<script src="../../../public/admin/dist/js/adminlte.js"></script>
+<script src="/admin/dist/js/adminlte.js"></script>
 
 <!-- PAGE PLUGINS -->
 <!-- jQuery Mapael -->
-<script src="../../../public/admin/plugins/jquery-mousewheel/jquery.mousewheel.js"></script>
-<script src="../../../public/admin/plugins/raphael/raphael.min.js"></script>
-<script src="../../../public/admin/plugins/jquery-mapael/jquery.mapael.min.js"></script>
-<script src="../../../public/admin/plugins/jquery-mapael/maps/usa_states.min.js"></script>
+<script src="/admin/plugins/jquery-mousewheel/jquery.mousewheel.js"></script>
+<script src="/admin/plugins/raphael/raphael.min.js"></script>
+<script src="/admin/plugins/jquery-mapael/jquery.mapael.min.js"></script>
+<script src="/admin/plugins/jquery-mapael/maps/usa_states.min.js"></script>
 <!-- ChartJS -->
-<script src="../../../public/admin/plugins/chart.js/Chart.min.js"></script>
+<script src="/admin/plugins/chart.js/Chart.min.js"></script>
 
 <!-- AdminLTE for demo purposes -->
-<script src="../../../public/admin/dist/js/demo.js"></script>
+<script src="/admin/dist/js/demo.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-<script src="../../../public/admin/dist/js/pages/dashboard2.js"></script>
+<script src="/admin/dist/js/pages/dashboard2.js"></script>
 <!-- DataTables  & Plugins -->
-<script src="../../../public/admin/plugins/datatables/jquery.dataTables.min.js"></script>
-<script src="../../../public/admin/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
-<script src="../../../public/admin/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
-<script src="../../../public/admin/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
-<script src="../../../public/admin/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
-<script src="../../../public/admin/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
-<script src="../../../public/admin/plugins/jszip/jszip.min.js"></script>
-<script src="../../../public/admin/plugins/pdfmake/pdfmake.min.js"></script>
-<script src="../../../public/admin/plugins/pdfmake/vfs_fonts.js"></script>
-<script src="../../../public/admin/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
-<script src="../../../public/admin/plugins/datatables-buttons/js/buttons.print.min.js"></script>
-<script src="../../../public/admin/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
+<script src="/admin/plugins/datatables/jquery.dataTables.min.js"></script>
+<script src="/admin/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+<script src="/admin/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+<script src="/admin/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+<script src="/admin/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
+<script src="/admin/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
+<script src="/admin/plugins/jszip/jszip.min.js"></script>
+<script src="/admin/plugins/pdfmake/pdfmake.min.js"></script>
+<script src="/admin/plugins/pdfmake/vfs_fonts.js"></script>
+<script src="/admin/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
+<script src="/admin/plugins/datatables-buttons/js/buttons.print.min.js"></script>
+<script src="/admin/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
 
 <!-- InputMask -->
-<script src="../../../public/admin/plugins/moment/moment.min.js"></script>
-<script src="../../../public/admin/plugins/inputmask/jquery.inputmask.min.js"></script>
+<script src="/admin/plugins/moment/moment.min.js"></script>
+<script src="/admin/plugins/inputmask/jquery.inputmask.min.js"></script>
 <!-- Tempusdominus Bootstrap 4 -->
-<script src="../../../public/admin/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+<script src="/admin/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
 
 <!-- Icon -->
 <script src="https://code.iconify.design/iconify-icon/1.0.5/iconify-icon.min.js"></script>
