--- a/Views/Admin/includes/side-nav.ejs
+++ b/Views/Admin/includes/side-nav.ejs
@@ -59,7 +59,7 @@
           <!-- Message Start -->
           <div class="media">
             <img
-              src="../../../public/admin/dist/img/user1-128x128.jpg"
+              src="/admin/dist/img/user1-128x128.jpg"
               alt="User Avatar"
               class="img-size-50 mr-3 img-circle"
             />
@@ -83,7 +83,7 @@
           <!-- Message Start -->
           <div class="media">
             <img
-              src="../../../public/admin/dist/img/user8-128x128.jpg"
+              src="/admin/dist/img/user8-128x128.jpg"
               alt="User Avatar"
               class="img-size-50 img-circle mr-3"
             />
@@ -107,7 +107,7 @@
           <!-- Message Start -->
           <div class="media">
             <img
-              src="../../../public/admin/dist/img/user3-128x128.jpg"
+              src="/admin/dist/img/user3-128x128.jpg"
               alt="User Avatar"
               class="img-size-50 img-circle mr-3"
             />
@@ -184,7 +184,7 @@
   <!-- Brand Logo -->
   <a href="<%= meta.url+'/home' %>" class="brand-link">
     <img
-      src="../../../public/admin/dist/img/logo-lottery.png"
+      src="/admin/dist/img/logo-lottery.png"
       alt="AdminLTE Logo"
       class="brand-image img-circle elevation-3"
       style="opacity: 0.8"
